--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -4,6 +4,7 @@
   padding: 2rem;
   max-width: inherit;
   gap: 2rem;
+  position: relative;
 
   .input {
     gap: 2rem;
@@ -113,8 +114,23 @@
       // margin-top: 2rem;
       background-color: hsl(183, 100%, 20%);
       color: $color-neutral-darker;
-      text-transform: uppercase;
-      font-size: 1rem;
+
+      &-btn {
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        font-family: $ff-default;
+        text-transform: uppercase;
+        font-size: 1rem;
+        width: 100%;
+        height: 100%;
+        vertical-align: middle;
+        color: inherit;
+
+        &:focus {
+          outline: none;
+        }
+      }
     }
   }
 }
@@ -143,7 +159,6 @@
       justify-content: space-evenly;
 
       &-reset {
-        display: block;
         align-self: end;
         margin-top: 2rem;
       }
