--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -10,7 +10,7 @@ body {
   min-height: 100vh;
   background-color: $color-neutral-light;
   gap: 2rem;
-  margin: 3rem;
+  margin: 3rem 0;
 }
 
 .container {
